syntax = "proto3";

package service1;

service Service1 {
  rpc SomeFunction(Request) returns (Response);
  rpc InsertUsers(UserRequest) returns (Response);
}

message Request {
  string parameter = 1;
}

message UserRequest {
  repeated User users = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string phone = 3;
}

message Response {
  string result = 1;
}
